core/unpackaged/main/default/objects/Commerce_Setting__mdt/Commerce_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Commerce Setting</label>
    <pluralLabel>Commerce Settings</pluralLabel>
</CustomObject>