core/unpackaged/main/default/objects/Commerce_Setting__mdt/fields/Generic_Product_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Generic_Product_External_Id__c</fullName>
    <description>External Id of a generic product that will be used when legacy order is loaded from ERP if its External ID is not found in SF</description>
    <inlineHelpText>External Id of a generic product that will be used when legacy order is loaded from ERP if its External ID is not found in SF</inlineHelpText>
    <label>Generic Product External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>