core/unpackaged/main/default/objects/Commerce_Setting__mdt/fields/Integration_Username__c.field-meta.xml
<CustomField>
    <fullName>Integration_Username__c</fullName>
    <description>The username of the Integration User</description>
    <label>Integration Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>