core/unpackaged/main/default/objects/Commerce_Setting__mdt/fields/List_Of_Default_Materials_For_Bushings__c.field-meta.xml
<CustomField>
    <fullName>List_Of_Default_Materials_For_Bushings__c</fullName>
    <description>Materials for default materials for bushings separated by ';' from the highest priority</description>
    <inlineHelpText>Materials for default materials for bushings separated by ';' from the highest priority</inlineHelpText>
    <label>List Of Default Materials For Bushings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>