core/unpackaged/main/default/objects/Commerce_Setting__mdt/fields/Product_Searchable_Fields__c.field-meta.xml
<CustomField>
    <fullName>Product_Searchable_Fields__c</fullName>
    <description>new line separated list of product fields that are searchable</description>
    <inlineHelpText>new line separated list of product fields that are searchable</inlineHelpText>
    <label>Product Searchable Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>