core/unpackaged/main/default/objects/Commerce_Setting__mdt/fields/Ship_Date_Days_Available__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date_Days_Available__c</fullName>
    <description>Number of days in the future for calendar on checkout to be available for ship date</description>
    <inlineHelpText>Number of days in the future for calendar on checkout to be available for ship date</inlineHelpText>
    <label>Ship Date Days Available</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>